; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_multicast.c___br_ip4_hash.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bridge/extr_br_multicast.c___br_ip4_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_bridge_mdb_htable = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_bridge_mdb_htable*, i64)* @__br_ip4_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__br_ip4_hash(%struct.net_bridge_mdb_htable* %0, i64 %1) #0 {
  %3 = alloca %struct.net_bridge_mdb_htable*, align 8
  %4 = alloca i64, align 8
  store %struct.net_bridge_mdb_htable* %0, %struct.net_bridge_mdb_htable** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.net_bridge_mdb_htable*, %struct.net_bridge_mdb_htable** %3, align 8
  %6 = getelementptr inbounds %struct.net_bridge_mdb_htable, %struct.net_bridge_mdb_htable* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load i64, i64* %4, align 8
  %9 = trunc i64 %8 to i32
  %10 = call i32 @jhash_1word(i32 %7, i32 %9)
  %11 = load %struct.net_bridge_mdb_htable*, %struct.net_bridge_mdb_htable** %3, align 8
  %12 = getelementptr inbounds %struct.net_bridge_mdb_htable, %struct.net_bridge_mdb_htable* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = sub nsw i32 %13, 1
  %15 = and i32 %10, %14
  ret i32 %15
}

declare dso_local i32 @jhash_1word(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
